--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,20 +1,21 @@
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
-         http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+                             http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
     <servlet>
-        <servlet-name>ServletConfig</servlet-name>
-        <servlet-class>servlets.ServletConfig</servlet-class>
+        <servlet-name>ConfigServlet</servlet-name>
+        <servlet-class>servlets.ServletsConfig</servlet-class>
     </servlet>
-
+    
     <servlet-mapping>
-        <servlet-name>ServletConfig</servlet-name>
+        <servlet-name>ConfigServlet</servlet-name>
         <url-pattern>/config</url-pattern>
     </servlet-mapping>
-
+    
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+
 </web-app>
