eclipse ist cool

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,3 +3,4 @@ encoding//src/main/webapp/help.jsp=UTF-8
 encoding//src/main/webapp/impressum.jsp=UTF-8
 encoding//src/main/webapp/index.jsp=UTF-8
 encoding//src/main/webapp/product.jsp=UTF-8
+encoding/<project>=UTF-8
