--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,21 +1,24 @@
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
                              http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
+	version="3.1">
 
-    <servlet>
-        <servlet-name>ServletConfig</servlet-name>
-        <servlet-class>servlets.ServletConfig</servlet-class>
-    </servlet>
-    
-    <servlet-mapping>
-        <servlet-name>ServletConfig</servlet-name>
-        <url-pattern>/config</url-pattern>
-    </servlet-mapping>
-    
-    <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
+	<!-- Define the Servlet -->
+	<servlet>
+		<servlet-name>ServletConfig</servlet-name>
+		<servlet-class>servlets.ServletConfig</servlet-class>
+	</servlet>
+
+	<!-- Map the Servlet to a URL pattern -->
+	<servlet-mapping>
+		<servlet-name>ServletConfig</servlet-name>
+		<url-pattern>/config</url-pattern>
+	</servlet-mapping>
+
+	<!-- Define the welcome file list -->
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
 
 </web-app>
